# MoonhookV4

./: CMakeLists.txt  README.md  zensical.toml
include/: ansi_terminal.hpp  bot.hpp  console.hpp  consolerandom.hpp  internal_options.hpp  option.hpp  plugins.hpp  safe_fs.hpp  webhook.hpp
include/internal_options/: bots.hpp  webhooks.hpp
src/: bot.cpp  main.cpp  plugins.cpp  safe_fs.cpp  webhook.cpp
